More fixes to UI. Give user-profile section a defined height. Fix column alignment.

--- a/public/browserapp/css/src/machinimareload.less
+++ b/public/browserapp/css/src/machinimareload.less
@@ -216,7 +216,17 @@
             background-image: url('@{base-image-url}/section-profile-background.png');
             background-repeat: no-repeat;
 			bottom: 48px;
-		}
+
+            #sayso-section-body {
+                height: 300px;
+
+                #sayso-user-profile-column-right {
+                    #sayso-user-profile-level{
+                        height: 60px;
+                    }
+                }
+            }
+        }
 
 		#sayso-section-triangle-white {
             display: none;
